# WeatherNoticeBot_V2

./: .dockerignore  .env.docker  .env.example  .env.prod  .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  debug_api.py  debug_forecast.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  recommended_city_codes.py  run.py  test_scheduler.py  test_user_service.py
.github/workflows/: deploy.yml  rollback.yml
.kiro/steering/: env.md  japanese-communication.md
alembic/: env.py
alembic/versions/: 60012a39537d_create_users_table.py  (+1 more)
data/: weather_bot_dev.db
debug/: __init__.py  check_area_codes.py  check_prefecture_codes.py  check_specific_codes.py  debug_api.py  debug_forecast.py  get_official_area_codes.py
docs/: command-reference.md  deployment.md  environment-variables.md  production-deployment.md  setup-guide.md  troubleshooting-guide.md  user-guide.md
k8s-manifests/: deployment.yaml  kustomization.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backup.sh  backup_db.sh  check-deployment.sh  deploy.sh  fix-docker-permissions.sh  restore_db.sh  run_tests.sh  setup.sh  start.sh
src/: __init__.py  bot.py  config.py  database.py
src/models/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_admin_commands.py  test_ai_integration.py  test_ai_service.py  test_ai_service_detailed.py  test_ai_service_error_handling.py  test_database.py  test_notification_schedule.py  test_notification_service.py  test_scheduler_service.py  test_weather_api.py  test_weather_service.py
(+34 files in other folders)
