[project]
name = "discord-weather-bot"
version = "0.1.0"
description = "Discord bot that provides weather information using Japan Meteorological Agency API"
authors = [
    {name = "Weather Bot Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "discord.py>=2.3.0",
    "aiohttp>=3.8.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "asyncpg>=0.28.0",
    "aiosqlite>=0.19.0",
    "greenlet>=2.0.0",
    "psutil>=5.9.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true